[package]
name = "moranometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.51"
teloxide = { version = "0.7.1", features = ["full"] }
log = "0.4.16"
pretty_env_logger = "0.4.0"
trellolon = {git = "https://github.com/Moran296/Trellolon.git"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79"}
lazy_static = "1.4.0"
